update behavior
update behavior